--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
   <body id = "full">
-      <script type="module" src="scripts/main.js"></script>
 
+      <script type="module" src="scripts/main.js"></script>
+      <script type="text/javascript">
+        window.arbol = new BS_t;
+        window.lista = new Lista;
+      </script>
 
       <div id = "div_titulo">
         <h1 id ="titulo_verde" >Binary</h1>
